export order to a indpendent table
