# cns_errors/rainbow.go
@@ -6,41 +6,41 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type RainbowError int
+type CnsError int
 
-type RainbowErrorInfo struct {
+type CnsErrorInfo struct {
 	Message        string
 	HttpStatusCode int
 }
 
-type RainbowErrorDetailInfo struct {
+type CnsErrorDetailInfo struct {
 	Code    int    `json:"code"`
 	Message string `json:"message"`
 }
 
-var rainbowErrorInfos = make(map[RainbowError]RainbowErrorInfo)
+var cnsErrorInfos = make(map[CnsError]CnsErrorInfo)
 
-func (r RainbowError) HttpStatusCode() int {
-	return rainbowErrorInfos[r].HttpStatusCode
+func (r CnsError) HttpStatusCode() int {
+	return cnsErrorInfos[r].HttpStatusCode
 }
 
-func (r RainbowError) Error() string {
-	return rainbowErrorInfos[r].Message
+func (r CnsError) Error() string {
+	return cnsErrorInfos[r].Message
 }
 
-func (r RainbowError) RenderJSON(c *gin.Context) {
-	httpStatusCode := rainbowErrorInfos[r].HttpStatusCode
+func (r CnsError) RenderJSON(c *gin.Context) {
+	httpStatusCode := cnsErrorInfos[r].HttpStatusCode
 	c.JSON(httpStatusCode, r.ErrorResponse())
 }
 
-func (r RainbowError) AbortWithRenderJSON(c *gin.Context) {
+func (r CnsError) AbortWithRenderJSON(c *gin.Context) {
 	debug.PrintStack()
 	c.Abort()
 	r.RenderJSON(c)
 }
 
-func (r RainbowError) ErrorResponse() *RainbowErrorDetailInfo {
-	return &RainbowErrorDetailInfo{
+func (r CnsError) ErrorResponse() *CnsErrorDetailInfo {
+	return &CnsErrorDetailInfo{
 		Code:    int(r),
 		Message: r.Error(),
 	}
