# models/orders_register.go
@@ -5,13 +5,28 @@ import (
 	"time"
 
 	confluxpay "github.com/wangdayong228/conflux-pay-sdk-go"
+
 	pmodels "github.com/wangdayong228/conflux-pay/models"
 	penums "github.com/wangdayong228/conflux-pay/models/enums"
+	"gorm.io/gorm"
 )
 
 type RegisterOrder struct {
 	BaseModel
 	RegisterOrderCore
+}
+
+func (o *RegisterOrder) Save(db *gorm.DB) error {
+	return db.Transaction(func(tx *gorm.DB) error {
+		if o.Order != nil {
+			err := tx.Save(&o.Order).Error
+			if err != nil {
+				return err
+			}
+			o.OrderID = &o.Order.ID
+		}
+		return tx.Save(o).Error
+	})
 }
 
 type RegisterOrderCore struct {
@@ -20,10 +35,11 @@ type RegisterOrderCore struct {
 }
 
 type OrderWithTx struct {
-	pmodels.OrderCore
-	TxID    uint    `json:"-"`
-	TxHash  string  `gorm:"type:varchar(255)" json:"tx_hash"`
-	TxState TxState `gorm:"type:varchar(255)" json:"tx_state"`
+	*pmodels.Order `gorm:"-"`
+	OrderID        *uint
+	TxID           uint    `json:"-"`
+	TxHash         string  `gorm:"type:varchar(255)" json:"tx_hash"`
+	TxState        TxState `gorm:"type:varchar(255)" json:"tx_state"`
 }
 
 func (o *OrderWithTx) IsStable() bool {
@@ -49,10 +65,10 @@ func NewOrderWithTxByPayResp(payResp *confluxpay.ModelsOrder) (*OrderWithTx, err
 	}
 
 	o := OrderWithTx{}
+	o.Order = &pmodels.Order{}
 	o.Amount = uint(*payResp.Amount)
 	o.AppName = *payResp.AppName
 	o.CodeUrl = payResp.CodeUrl
-	// o.CommitHash = commitHash
 	o.Description = payResp.Description
 	o.H5Url = payResp.H5Url
 	o.Provider = *provider
@@ -85,26 +101,49 @@ func (*RegisterOrderOperater) FindRegOrderByCommitHash(commitHash string) (*Regi
 	if err := GetDB().Where(&o).First(&o).Error; err != nil {
 		return nil, err
 	}
+
+	if err := CompleteRegisterOrders([]*RegisterOrder{&o}); err != nil {
+		return nil, err
+	}
+
 	return &o, nil
 }
 
 func (*RegisterOrderOperater) FindNeedRegiterOrders(startID uint) ([]*RegisterOrder, error) {
 	o := RegisterOrder{}
-	o.TradeState = penums.TRADE_STATE_SUCCESSS
-	o.TxID = 0
+	// o.TradeState = penums.TRADE_STATE_SUCCESSS
 
 	var orders []*RegisterOrder
-	return orders, GetDB().Where("id > ? and tx_id = ?", startID, 0).Where(&o).Find(&orders).Error
+	if err := GetDB().Where("id > ? and tx_id = ?", startID, 0).Where(&o).Find(&orders).Error; err != nil {
+		return nil, err
+	}
+
+	if err := CompleteRegisterOrders(orders); err != nil {
+		return nil, err
+	}
+
+	// filter trade successs
+	orders = FilterRegisterOrdersByTxState(orders, penums.TRADE_STATE_SUCCESSS)
+
+	return orders, nil
 }
 
 func (*RegisterOrderOperater) FindNeedSyncStateRegOrders(count int) ([]*RegisterOrder, error) {
 	var orders []*RegisterOrder
-	return orders, GetDB().
+	if err := GetDB().
 		Not("tx_id = ?", 0).
 		Where("tx_state = ?", TX_STATE_INIT).
 		// Or("tx_state = ?", TX_STATE_PENDING).
 		Find(&orders).
-		Limit(count).Error
+		Limit(count).Error; err != nil {
+		return nil, err
+	}
+
+	if err := CompleteRegisterOrders(orders); err != nil {
+		return nil, err
+	}
+
+	return orders, nil
 }
 
 func (r *RegisterOrderOperater) UpdateRegOrderState(commitHash string, raw *confluxpay.ModelsOrder) error {
@@ -119,5 +158,45 @@ func (r *RegisterOrderOperater) UpdateRegOrderState(commitHash string, raw *conf
 	refundState, _ := penums.ParserefundState(*raw.RefundState)
 	o.RefundState = *refundState
 
-	return GetDB().Save(o).Error
+	return o.Save(GetDB())
+}
+
+// TODO: 用泛型代替
+func CompleteRegisterOrders(regOrders []*RegisterOrder) error {
+	// find orders
+	var ids []uint
+	for _, o := range regOrders {
+		if o.OrderID != nil {
+			ids = append(ids, *o.OrderID)
+		}
+	}
+
+	var orders []*pmodels.Order
+	if err := GetDB().Find(&orders, ids).Error; err != nil {
+		return nil
+	}
+
+	// map orders
+	var ordersCache map[uint]*pmodels.Order = make(map[uint]*pmodels.Order)
+	for _, o := range orders {
+		ordersCache[o.ID] = o
+	}
+
+	for _, ro := range regOrders {
+		if ro.OrderID != nil {
+			ro.Order = ordersCache[*ro.OrderID]
+		}
+	}
+
+	return nil
+}
+
+func FilterRegisterOrdersByTxState(regOrders []*RegisterOrder, tradeState penums.TradeState) []*RegisterOrder {
+	var result []*RegisterOrder
+	for _, o := range regOrders {
+		if o.Order != nil && o.Order.TradeState == tradeState {
+			result = append(result, o)
+		}
+	}
+	return result
 }
